odoo/odoo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: odoo-deploy
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: odoo
        tier: frontend
    spec:
      containers:
      - image: odoo:10
        name: odoo-deploy
        securityContext:
          privileged: true
          runAsUser: 0
        ports:
        - containerPort: 8069
          name: odoo
        volumeMounts:
        - name: odoo-pvc
          mountPath: /var/lib/odoo
      volumes:
      - name: odoo-pvc
        persistentVolumeClaim:
          claimName: odoo-pvc
