odoo/odoo-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: odoo-db
  name: odoo-postgres
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: odoo-db
        tier: backend
    spec:
      containers:
      - image: postgres:9.4
        name: odoo-postgres
        ports:
        - containerPort: 5432
          name: odoo-postgres
        volumeMounts:
        - name: odoo-postgres-pvc
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-postgres-pvc
        persistentVolumeClaim:
          claimName: odoo-postgres-pvc
