odoo/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
  labels:
    app: odoo
spec:
  ports:
    - port: 8069
  selector:
    app: odoo
    tier: frontend
