odoo/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: odoo
  labels:
    app: odoo-db
spec:
  ports:
    - port: 5432
  selector:
    app: odoo-db
    tier: backend
